# certwatch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
certwatch/: __init__.py  cli.py  core.py
tests/: test_core.py
