[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certwatch"
version = "0.1.0"
description = "A fast TLS certificate and configuration grader for your terminal and CI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "GlyphSH", email = "56896608+GlyphSH@users.noreply.github.com" }]
keywords = ["tls", "ssl", "certificate", "security", "monitoring", "devops", "sysadmin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = ["cryptography>=3.4"]

[project.urls]
Homepage = "https://github.com/GlyphSH/certwatch"
Issues = "https://github.com/GlyphSH/certwatch/issues"

[project.scripts]
certwatch = "certwatch.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["certwatch"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
